<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BirdieputtActivity!</string>
    <string name="app_name">Birdieputt</string>
    <string name="menu_map">Map</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_save">Save</string>
    <string name="tvDistance_text">  0 yds</string>
    <string name="tvAccuracy_text"> +/- 0 yds</string>
    <string name="bClear_text">Clear</string>
    <string name="bClub_text">Club</string>
    <string name="bPlus_text">+</string>
    <string name="bMinus_text">-</string>
    <string name="menu_ads">Advertisements</string>
    <string name="menu_putt">Augmented Reality Putting Help</string>
    <string name="menu_perspective">Augmented Reality Flag Distance</string>
    <string name="menu_golfbag">Golf bag</string>
    <string name="menu_help_about">Help/About</string>
    <string name="menu_add">Add Club</string>
    <string name="menu_edit">Edit Club</string>
    <string name="menu_trash">Trash Club</string>
    <string name="menu_use">Use stats data</string>
    <string name="menu_reset">Reset Stats</string>

</resources>