<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_map"
        android:icon="@drawable/ic_action_map"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="@string/menu_map"/>
    <item
        android:id="@+id/menu_camera"
        android:icon="@drawable/ic_action_camera"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_camera"/>
    <item
        android:id="@+id/menu_golfbag"
        android:icon="@drawable/ic_action_golfbag"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/menu_golfbag"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="3"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_action_help"
        android:orderInCategory="4"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_help"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_action_about"
        android:orderInCategory="5"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_about"/>

</menu>